# NoesisBGFXTesting

./: CMakeLists.txt  README.md  Shader.cpp  Shader.h  glad.c  glad.h  main.cpp  shader.vert  varying.def.sc  vcpkg.json
BGFXRenderContext/Src/: BGFXRenderContext.cpp  BGFXRenderContext.hpp  Render.BGFXRenderContext.cpp
BGFXRenderDevice/Include/NsRender/: BGFXFactory.hpp  BGFXRenderDeviceApi.hpp
BGFXRenderDevice/Src/: BGFXRenderDevice.cpp  BGFXRenderDevice.hpp  Render.BGFXRenderDevice.cpp
BGFXRenderDevice/Src/Shaders/: build_shaders.bat  shader.fragment  shader.vertex  varying.def.sc
